test/nonLiftedH1.slq

def main(){
	if H(0) { } // error
}
